Fix AppHeader item spacing when there's no toolbar

--- a/src/components/AppHeader.module.css
+++ b/src/components/AppHeader.module.css
@@ -3,6 +3,5 @@
   in Tailwind, such as complex grid layouts.
  */
 .header {
-  display: grid;
   grid-template-columns: 1fr auto 1fr;
 }
